Closed
Bug 250230
Opened 21 years ago
Closed 21 years ago
Gmail doesn't load with the July 7th build.
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: stephend, Assigned: aaronlev)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
1.12 KB,
patch
|
aaronlev
:
review+
jst
:
superreview+
dveditz
:
approval1.8a2+
|
Details | Diff | Splinter Review |
(Networking for now, but might this be something else...?)
Build ID: 2004-07-07-07, Windows XP Seamonkey trunk.
Summary: Gmail doesn't load with the July 7th build.
Steps to Reproduce:
1. Load www.gmail.com
2. This will redirect to http://gmail.google.com/gmail
Expected Results:
After the 'Loading...' text in red appears, it should redirect to your Gmail account
Actual Results:
It sticks on 'Loading...', but this isn't doing any client-side loading, it's
waiting for a redirect or something on the server-side.
Build 2004-07-05-09 works just fine.
Comment 2•21 years ago
|
||
SunOS, too. This is not platform-specific.
| Reporter | ||
Comment 3•21 years ago
|
||
<biesi> Error loading URL
https://www.google.com/accounts/CheckCookie?continue=http%3A%2F%2Fgmail.google.com%2Fgmail&service=mail&chtml=LoginDoneHtml
: 804b0002
<biesi> hm...
<biesi> (that's NS_BINDING_ABORTED)
<biesi> WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(EnsureScriptEnvironment())) failed,
file /home/chb/mozilla/docshell/base/nsWebShell.cpp, line 290
<biesi> WARNING: NS_ENSURE_TRUE(aPresContext) failed, file
/home/chb/mozilla/content/html/content/src/nsGenericHTMLElement.cpp, line 1359
<biesi> the webshell one happens twice; the last one ~10 times
| Reporter | ||
Updated•21 years ago
|
Flags: blocking1.8a2?
Comment 4•21 years ago
|
||
so, this patch would fix gmail. I have zero idea whether it is correct or the
right thing to do.
aaronl added this as part of Bug 171366
Comment 6•21 years ago
|
||
-> dom:html, and cc'ing some people who know this code and can maybe comment on
the patch
Component: Networking → DOM: HTML
QA Contact: benc → ian
| Assignee | ||
Comment 7•21 years ago
|
||
Comment on attachment 152547 [details] [diff] [review]
this would fix it
Biesi, can you remove the line instead of commenting it out? With that, r=
Attachment #152547 -
Flags: review+
| Assignee | ||
Comment 8•21 years ago
|
||
I think getting rid of the NS_ENSURE_ARG is the right fix because it will now
continue in the call chain to nsGenericElement::HandleDOMEvent, the way it
always did when aPresContext is null.
Comment 9•21 years ago
|
||
Comment on attachment 152547 [details] [diff] [review]
this would fix it
sr=jst with that line removed.
Attachment #152547 -
Flags: superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #152547 -
Flags: superreview?
| Assignee | ||
Updated•21 years ago
|
Attachment #152547 -
Flags: superreview? → approval1.8a2?
Comment 10•21 years ago
|
||
Comment on attachment 152547 [details] [diff] [review]
this would fix it
a=dveditz
Attachment #152547 -
Flags: approval1.8a2? → approval1.8a2+
Comment 11•21 years ago
|
||
This should block 1.8a2 -- high profile site.
Flags: blocking1.8a2? → blocking1.8a2+
Comment 12•21 years ago
|
||
Comment on attachment 152547 [details] [diff] [review]
this would fix it
a=sspitzer, but I think we should remove that NS_ENSURE_ARG, instead of
commenting it out, based on aaron's comment:
"I think getting rid of the NS_ENSURE_ARG is the right fix"
can you remove it, instead of commenting it out?
| Reporter | ||
Updated•21 years ago
|
URL: http://www.gmail.com
Comment 13•21 years ago
|
||
*** Bug 250385 has been marked as a duplicate of this bug. ***
Comment 14•21 years ago
|
||
Checking in content/html/content/src/nsGenericHTMLElement.cpp;
/cvsroot/mozilla/content/html/content/src/nsGenericHTMLElement.cpp,v <--
nsGenericHTMLElement.cpp
new revision: 1.522; previous revision: 1.521
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 15•21 years ago
|
||
*** Bug 250352 has been marked as a duplicate of this bug. ***
Comment 16•21 years ago
|
||
*** Bug 250494 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 17•21 years ago
|
||
Verified FIXED with build 2004-07-13-08 on Windows XP.
Status: RESOLVED → VERIFIED
Comment 18•21 years ago
|
||
*** Bug 251570 has been marked as a duplicate of this bug. ***
Comment 19•21 years ago
|
||
on w2k i get instead of "loading" with the nightly build version:
var testcookie = 'jscookietest=valid';document.cookie = testcookie;if
(document.cookie.indexOf(testcookie) == -1) {top.location =
'/gmail/html/nocookies.html';}document.cookie = testcookie + ';expires=' + new
Date(0).toGMTString();var agt = navigator.userAgent.toLowerCase();if
(agt.indexOf('msie')!= -1 && document.all) {var control = (agt.indexOf('msie 5')
!= -1) ? 'Microsoft.XMLHTTP' : 'Msxml2.XMLHTTP';try {new NULL /script>
but i'm not sure if this is the right one, as help about says:
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a2) Gecko/20040711
Firefox/0.9.0+
You need to log in
before you can comment on or make changes to this bug.
Description
•