bug 250230 call base class's HandleEvent even if aPresContext is NULL r=aaronl sr=jst a=sspitzer,dveditz